--- a/index.html
+++ b/index.html
@@ -231,6 +231,6 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-
+  <script src="/Users/alexandrausmanova/Desktop/projectjs/2123091-kekstagram-26/js/main.js"></script>
 </body>
 </html>
